updated kibana create-role errand to use http protocol
Co-authored-by: Gaurav Pal <gaur4v.pal@gmail.com>

--- a/jobs/create-roles/templates/bin/run.sh.erb
+++ b/jobs/create-roles/templates/bin/run.sh.erb
@@ -4,7 +4,7 @@ set -euf -o pipefail
 
 <%
 kibana_link = link('kibana')
-protocol = kibana_link.p('kibana.elasticsearch.protocol', 'http')
+protocol = kibana_link.p('kibana.elasticsearch.client.protocol', 'http')
 url="#{protocol}://"
 username = kibana_link.p('kibana.elasticsearch.client.username', nil)
 password = kibana_link.p('kibana.elasticsearch.client.password', nil)
